post: improve line breaking for links in markdown

--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -52,11 +52,11 @@ hr
 // Formatted text
 a
 	color inherit
-	overflow-wrap anywhere
 	text-decoration none
 .md
 	a
 		color lightskyblue
+		word-break break-all
 	a:is([href^='/'], [href^='#'])::before
 		background lightsalmon
 		border-radius 999px
