--- a/src/ui/listing/Listing.pug
+++ b/src/ui/listing/Listing.pug
@@ -97,6 +97,7 @@ script.
 	main.listing
 		nav.listing-nav
 			header
+				p Viewing list:
 				.source-type {source_type_display_name}
 				.source-name {source_display_name}
 				{#if source_curator_display_name}
