--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -27,7 +27,6 @@ html
 *:focus
 	outline-color gold
 .md
-	cursor default
 	overflow-wrap anywhere
 
 // Body
@@ -57,18 +56,6 @@ a
 	a
 		color lightskyblue
 		word-break break-all
-	a:is([href^='/'], [href^='#'])::before
-		background lightsalmon
-		border-radius 999px
-		color white
-		content 'r/'
-		display inline
-		font-size 0.8em
-		height 1.25em
-		line-height 1.25
-		margin-left 0.2em
-		margin-right 0.4em
-		padding 0 0.5em
 	a:not(:is([href^='/'], [href^='#']))::before
 		background lightskyblue
 		border-radius 999px
@@ -122,13 +109,14 @@ pre
 
 // Spoilers
 .md-spoiler-text
-	background var(--color-writing)
-	padding 0.25em
-	&:hover
-		background var(--color-paper-callout)
+	background black
+	color transparent
 	*
 		opacity 0
-		&:hover &
+	&:hover
+		background transparent
+		color inherit
+		*
 			opacity 1
 
 // Lists
@@ -212,3 +200,5 @@ input
 	line-height inherit
 	padding 0
 	word-spacing inherit
+details
+	cursor pointer
