ui: general refactor

--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -3,7 +3,7 @@
 	font-family 'Inter'
 	font-style normal italic
 	font-weight 100 900
-	src url('../asset/inter_100_900.woff2')
+	src url('../vendor/inter_100_900.woff2')
 html
 	color-scheme dark
 	--color-control rgba(0,0,0,0.05)
