--- a/src/ui/listing/Listing.pug
+++ b/src/ui/listing/Listing.pug
@@ -1,135 +1,129 @@
 script.
 	import api from '../../api/index.js'
-	import Button from '../input/Button.pug'
-	import Headline from '../post/Headline.pug'
-	import SearchInput from './SearchInput.pug'
-	import SortPicker from './SortPicker.pug'
-	import TimeRangePicker from './TimeRangePicker.pug'
-	import Unavailable from '../error/Unavailable.pug'
-	export collection_short_id = null
-	export name = null
-	export page_size = 10
-	export search_text = null
-	export sort = null
-	export type = 'subreddit'
-	export user_name = null
-	collection = null
+	import Button from '../framework/Button.pug'
+	import ListingPost from './ListingPost.pug'
+	import ListingSearchField from './ListingSearchField.pug'
+	import ListingSort from './ListingSort.pug'
+	import ListingTimeRange from './ListingTimeRange.pug'
+	export data = null
+	export type = null
+
+	{ collection_short_id, multireddit_name, page_size, post_short_id, posts_sort, search_text, subreddit_name, user_name, wiki_name, wiki_revision_id } = data
+	if !page_size then page_size = 10
+	if !posts_sort then posts_sort = 'hot'
+
 	error = null
 	loading = false
-	post_short_ids = null
+	subreddit_posts_lazy_load_id = null
+	subreddit_posts_lazy_loadable = false
+	
 	switch type
-		when 'collection'
-			application_path = "/c/#{collection_short_id}"
-			original_path = "/collection/#{collection_short_id}"
-			sorts = []
-			source_display_name = collection_short_id
-			source_curator_display_name = ''
-			source_type_display_name = 'Collection'
-			api.loadWatch(api.ID('collection', collection_short_id),
-				(x) ->
-					{ data: collection, error: error } = x
-					if collection
-						source_display_name = collection.title
-						source_curator_display_name = collection.author_name
-						post_short_ids = collection.posts
+		when 'collection_posts'
+			type_display_name = 'Collection'
+			display_name = collection_short_id
+			base_path = "/c/#{collection_short_id}"
+			official_path = "/collection/#{collection_short_id}"
+			collection = null
+			post_short_ids = null
+			api.loadWatch(api.ID('collection', collection_short_id), (x) ->
+				{ data: collection, error, loading } = x
+				if collection
+					display_name = collection.title
+					post_short_ids = collection.posts
 			)
-		when 'multireddit'
-			application_path = "/m/#{user_name}/#{name}"
-			original_path = "/user/#{user_name}/m/#{name}"
-			posts_dataset_id = 
-				if sort.split('-')[0] is 'search'
-					if search_text then api.ID('search_posts_in_multireddit', user_name, name, sort.split('-')[1], search_text, page_size)
-					else null
-				else
-					api.ID('multireddit_posts', user_name, name, sort, page_size)
-			sorts = ['new', 'rising', 'hot', 'controversial', 'top', 'search']
-			source_display_name = name
-			source_curator_display_name = user_name
-			source_type_display_name = 'Multireddit'
-		when 'special_multireddit'
-			if name is 'frontpage'
-				application_path = ''
-				posts_dataset_id = api.ID('multireddit_posts', 'r', 'home', sort, page_size)
-				sorts = ['new', 'rising', 'hot', 'controversial', 'top', 'best']
-			else
-				application_path = "/#{name}"
-				posts_dataset_id =
-					if sort.split('-')[0] is 'search'
-						if search_text then api.ID('search_posts', sort.split('-')[1], search_text, page_size)
-						else null
+		when 'multireddit_posts'
+			type_display_name = 'Multireddit'
+			display_name = "#{user_name}/#{multireddit_name}"
+			base_path = "/m/#{user_name}/#{multireddit_name}"
+			official_path = "/user/#{user_name}/m/#{multireddit_name}"
+			sort_options = ['new', 'rising', 'hot', 'controversial', 'top', 'search']
+			if posts_sort.split('-')[0] is 'search'
+				if search_text
+					if user_name is 'r'
+						posts_dataset_id = api.ID('search_posts', posts_sort.split('-')[1], search_text, page_size)
 					else
-						api.ID('multireddit_posts', name.split('/')[0], name.split('/')[1], sort, page_size)
-				sorts = switch name
-					when 'r/all' then ['new', 'rising', 'hot', 'controversial', 'top', 'search']
-					when 'r/popular' then ['new', 'rising', 'hot', 'controversial', 'top', 'geo']
-			original_path = application_path
-			source_display_name = name
-			source_type_display_name = 'Special Multireddit'
-		when 'subreddit'
-			application_path = "/r/#{name}"
-			original_path = "/r/#{name}"
-			posts_dataset_id =
-				if sort.split('-')[0] is 'search'
-					if search_text then api.ID('search_posts_in_subreddit', name, sort.split('-')[1], search_text, page_size)
-					else null
+						posts_dataset_id = api.ID('search_posts_in_multireddit', user_name, multireddit_name, posts_sort.split('-')[1], search_text, page_size)
+			else
+				posts_dataset_id = api.ID('multireddit_posts', user_name, multireddit_name, posts_sort, page_size)
+		when 'subreddit_posts'
+			type_display_name = 'Subreddit'
+			sort_options = ['new', 'rising', 'hot', 'controversial', 'top', 'search']
+			if subreddit_name
+				display_name = subreddit_name
+				base_path = "/r/#{subreddit_name}"
+				official_path = "/r/#{subreddit_name}"
+				if posts_sort.split('-')[0] is 'search'
+					if search_text
+						posts_dataset_id = api.ID('search_posts_in_subreddit', subreddit_name, posts_sort.split('-')[1], search_text, page_size)
 				else
-					api.ID('subreddit_posts', name, sort, page_size)
-			sorts = ['new', 'rising', 'hot', 'controversial', 'top', 'search']
-			source_display_name = name
-			source_type_display_name = 'Subreddit'
-		when 'user_profile'
-			application_path = "/u/#{user_name}"
+					posts_dataset_id = api.ID('subreddit_posts', subreddit_name, posts_sort, page_size)
+				subreddit = null
+				api.loadWatch(api.ID('subreddit', subreddit_name), (x) ->
+					{ data: subreddit } = x
+					if subreddit
+						display_name = subreddit.display_name
+				)
+			else if post_short_id
+				source_post = null
+				api.loadWatch(api.ID('post', post_short_id), (x) ->
+					{ data: source_post } = x
+					if source_post
+						display_name = source_post.subreddit
+						base_path = "/r/#{source_post.subreddit}"
+						official_path = "/r/#{source_post.subreddit}"
+						subreddit_posts_lazy_load_id = api.ID('subreddit_posts', source_post.subreddit, posts_sort, page_size)
+						subreddit_posts_lazy_loadable = true
+						api.watch(subreddit_posts_lazy_load_id, (x) ->
+							{ data: post_short_ids, error, loading } = x
+							subreddit_posts_lazy_loadable = false
+						)
+				)
+		when 'user_posts'
+			type_display_name = 'Profile'
 			display_name = "u/#{user_name}"
-			original_path = "/u/#{user_name}"
-			posts_dataset_id = api.ID('user_posts', user_name, sort, page_size)
-			sorts = ['new', 'hot', 'controversial', 'top']
-			source_display_name = user_name
-			source_type_display_name = 'Profile'
-	if posts_dataset_id
-		page_selection = 1
-		api.loadWatch(posts_dataset_id,
-			(x) -> { data: post_short_ids, error, loading } = x
-		)
+			base_path = "/u/#{user_name}"
+			official_path = "/u/#{user_name}"
+			sort_options = ['new', 'hot', 'controversial', 'top']
+			posts_dataset_id = api.ID('user_posts', user_name, posts_sort, page_size)
 
-{#if error}
-	{#if error instanceof api.errors.ServerError}
-		Unavailable(path='/r/{name}')
-{:else if loading}
-	p Loading...
-{:else}
-	main.listing
-		nav.listing-nav
-			header
-				p Viewing list:
-				.source-type {source_type_display_name}
-				.source-name {source_display_name}
-				{#if source_curator_display_name}
-					.source-curator {source_curator_display_name}
-			{#if sort}
-				menu
-					section(style='display: flex; gap: 2em')
-						SortPicker(base_path={application_path} selection={sort.split('-')[0]} sorts={sorts})
-						{#if ['top', 'controversial', 'search'].includes(sort.split('-')[0])}
-							TimeRangePicker(base_path={application_path + '/' + sort.split('-')[0]} selection={sort.split('-')[1]})
-					{#if sort.split('-')[0] === 'search'}
-						SearchInput(base_path={application_path + '/' + sort} initial_query={search_text})
-			hr
-			section.listing-tab-content
-				ol.post-list
-					{#if post_short_ids}
-						{#each post_short_ids as short_id}
-							Headline(post_short_id={short_id} show_subreddit={type.endsWith('multireddit')})
-			hr(style='margin: 0 0 1em 0')
-			footer
-				section.listing-tab-content-pages
-					Button(text='+')
+	if posts_dataset_id
+		post_short_ids = null
+		api.loadWatch(posts_dataset_id, (x) -> { data: post_short_ids, error, loading } = x)
+
+nav.listing
+	{#if error}
+		{#if error instanceof api.errors.ServerError}
+			p Content unavailable.
+			a(href='https://www.reddit.com{official_path}') Visit Reddit to see why.
+	{:else if loading}
+		p Loading...
+	{:else}
+		header
+			{#if type_display_name && display_name}
+				span.listing-type {type_display_name}:
+				span.listing-name {display_name}
+		{#if sort_options && !subreddit_posts_lazy_loadable}
+			menu
+				section(style='display: flex; gap: 2em')
+					ListingSort(base_path={base_path} selection={posts_sort.split('-')[0]} sort_options={sort_options})
+					{#if ['top', 'controversial', 'search'].includes(posts_sort.split('-')[0])}
+						ListingTimeRange(base_path={base_path + '/' + posts_sort.split('-')[0]} selection={posts_sort.split('-')[1]})
+				{#if posts_sort.split('-')[0] === 'search'}
+					ListingSearchField(base_path={base_path + '/' + posts_sort} initial_query={search_text})
+		hr
+		section.listing-content
+			{#if post_short_ids}
+				ol.listing-posts
+					{#each post_short_ids as post_short_id}
+						ListingPost(short_id={post_short_id} show_subreddit={type !== 'subreddit_posts'})
+			{:else if subreddit_posts_lazy_loadable}
+				Button(action={() => api.load(subreddit_posts_lazy_load_id)} text='Load posts')
+		hr(style='margin: 0 0 1em 0')
+		footer
+			Button(text='+')
 
 style.
 	.listing
-		height 100vh
-		width 560px
-	.listing-nav
-		border-radius 5px
 		display flex
 		flex-flow column nowrap
 		height 100vh
@@ -140,12 +134,12 @@ style.
 			display flex
 			gap 1em
 			margin-bottom 1em
-	.listing-tab-content
+	.listing-content
 		flex 1
 		overflow-y auto
 		&::-webkit-scrollbar
 			display none
-	.post-list
+	.listing-posts
 		display flex
 		flex-flow column nowrap
 		gap 1ch
