--- a/src/ui/page/post/PostScore.pug
+++ b/src/ui/page/post/PostScore.pug
@@ -14,10 +14,10 @@ script.
 button.post-score(class:downvoted={vote == -1} class:upvoted={vote == 1} on:click={() => toggle_upvote()} on:contextmenu={(e) => { e.preventDefault(); toggle_downvote() }}) {controversiality > 0 ? '◆' : ''}
 	span.post-score-votes
 		{#if Number.isFinite(value)}
-			{#if value + vote < 0}
-				| −{Math.abs(value + vote)}
+			{#if value < 0}
+				| −{Math.abs(value)}
 			{:else}
-				| {value + vote}
+				| {value}
 		{:else}
 			| *
 	{#if awards?.length}
