--- a/src/ui/base/BasePageContent.pug
+++ b/src/ui/base/BasePageContent.pug
@@ -26,7 +26,7 @@ script.
 	{:else if type === 'multireddit_popular'}
 		MultiredditPopular(multireddit_name={data.multireddit_name} user_name={data.user_name})
 	{:else if type === 'post'}
-		Post(comment_short_id={data.comment_short_id} comments_sort={data.comments_sort} comment_context={data.comment_context} short_id={data.post_short_id})
+		Post(comment_short_id={data.comment_short_id} comments_sort={data.comments_sort} comment_context={data.comment_context} listing_sort={data.posts_sort} short_id={data.post_short_id})
 	{:else if type === 'subreddit'}
 		Subreddit(name={data.subreddit_name})
 	{:else if type === 'user'}
