--- a/src/ui/listing/Listing.pug
+++ b/src/ui/listing/Listing.pug
@@ -21,13 +21,15 @@ script.
 	pages = []
 	pages_error = []
 	pages_loading = []
-	subreddit_posts_lazy_loadable = false
 	
 	switch type
 		when 'collection_posts'
 			display_name = collection_short_id
 			base_path = "/c/#{collection_short_id}"
 			official_path = "/collection/#{collection_short_id}"
+			listing_post_params =
+				lt: 'c'
+				li: collection_short_id
 			collection = null
 			api.loadWatch(api.ID('collection', collection_short_id), ({ data: collection, error, loading }) ->
 				if loading then pages_loading[0] = loading
@@ -48,33 +50,32 @@ script.
 					else
 						base_page_id = api.ID('search_posts_in_multireddit', user_name, multireddit_name, posts_sort.split('-')[1], search_text, page_size)
 			else base_page_id = api.ID('multireddit_posts', user_name, multireddit_name, posts_sort, page_size)
+			listing_post_params =
+				lt: 'm'
+				lu: user_name
+				ln: multireddit_name
+				ls: posts_sort
 		when 'subreddit_posts'
+			display_name = subreddit_name
+			base_path = "/r/#{subreddit_name}"
+			official_path = "/r/#{subreddit_name}"
 			sort_options = ['new', 'rising', 'hot', 'controversial', 'top', 'search']
-			if subreddit_name
-				display_name = subreddit_name
-				base_path = "/r/#{subreddit_name}"
-				official_path = "/r/#{subreddit_name}"
-				if posts_sort.split('-')[0] is 'search'
-					if search_text
-						base_page_id = api.ID('search_posts_in_subreddit', subreddit_name, posts_sort.split('-')[1], search_text, page_size)
-				else base_page_id = api.ID('subreddit_posts', subreddit_name, posts_sort, page_size)
-			else if post_short_id
-				source_post = null
-				api.loadWatch(api.ID('post', post_short_id), (x) ->
-					{ data: source_post } = x
-					if source_post
-						display_name = source_post.subreddit
-						base_path = "/r/#{source_post.subreddit}"
-						official_path = "/r/#{source_post.subreddit}"
-						base_page_id = api.ID('subreddit_posts', source_post.subreddit, posts_sort, page_size)
-						subreddit_posts_lazy_loadable = true
-				)
+			if posts_sort.split('-')[0] is 'search'
+				if search_text
+					base_page_id = api.ID('search_posts_in_subreddit', subreddit_name, posts_sort.split('-')[1], search_text, page_size)
+			else base_page_id = api.ID('subreddit_posts', subreddit_name, posts_sort, page_size)
+			listing_post_params =
+				ls: posts_sort
 		when 'user_posts'
 			display_name = user_name
 			base_path = "/u/#{user_name}"
 			official_path = "/u/#{user_name}"
 			sort_options = ['new', 'hot', 'controversial', 'top']
 			base_page_id = api.ID('user_posts', user_name, posts_sort, page_size)
+			listing_post_params =
+				lt: 'u'
+				lu: user_name
+				ls: posts_sort
 
 	load_page = (page_number) ->
 		if page_number is 0
@@ -85,7 +86,6 @@ script.
 					is_last_page = pages.length == 0
 					if is_last_page and page.length >= page_size then has_next_page = true
 					pages[0] = page
-					subreddit_posts_lazy_loadable = false
 			)
 		else
 			after_short_id = pages[page_number - 1].at(-1)
@@ -111,7 +111,7 @@ nav.listing
 		header
 			{#if display_name}
 				ListingNameTag(link={base_path} text={display_name} type={type})
-		{#if sort_options && !subreddit_posts_lazy_loadable}
+		{#if sort_options}
 			menu
 				section(style='display: flex; gap: 2em')
 					ListingSort(base_path={base_path} selection={posts_sort.split('-')[0]} sort_options={sort_options})
@@ -125,12 +125,9 @@ nav.listing
 				{#each pages as page}
 					{#each page as short_id}
 						{#if type.endsWith('posts')}
-							ListingPost(short_id={short_id} show_subreddit={type !== 'subreddit_posts'})
+							ListingPost(link_params={listing_post_params} short_id={short_id} show_subreddit={type !== 'subreddit_posts'})
 				{#if has_next_page}
 					Button(action={() => load_page(pages.length)} text='More')
-			{:else if subreddit_posts_lazy_loadable}
-				Button(action={() => load_page(0)} text='Load posts')
-
 style.
 	.listing
 		display flex
