--- a/src/ui/listing/ListingPost.pug
+++ b/src/ui/listing/ListingPost.pug
@@ -8,6 +8,7 @@ script.
 
 	import ListingNameTag from './ListingNameTag.pug'
 	
+	export link_params = null
 	export selected = false
 	export short_id = null
 	export show_subreddit = false
@@ -20,7 +21,7 @@ script.
 	)
 
 {#if post}
-	a.listing-post(class:selected={selected} href='/r/{post.subreddit.toLowerCase()}/post/{short_id}')
+	a.listing-post(class:selected={selected} href="/r/{post.subreddit.toLowerCase()}/post/{short_id}{link_params ? '?' + new URLSearchParams(link_params) : ''}")
 		{#if show_subreddit}
 			ListingNameTag(link='/r/{post.subreddit}' text={post.subreddit} type='subreddit_posts')
 		{:else}
