--- a/src/ui/base/BaseNavigation.pug
+++ b/src/ui/base/BaseNavigation.pug
@@ -3,7 +3,8 @@ script.
 
 nav.global-nav
 	section
-		img.main-logo(alt='')
+		a(href='/')
+			img.main-logo(alt='')
 		br
 		Button(key='~' text='Replies')
 		Button(key='!' text='Messages')
